Make nav sizing consistent

--- a/app/static/html/home.html
+++ b/app/static/html/home.html
@@ -22,10 +22,10 @@
 	</head>
 
 	<body class="h-100 d-flex text-center">
-        <div class="d-flex h-100 mx-auto flex-column">
+        <div class="d-flex h-100 container flex-column">
             <header class="mb-auto mt-3">
                 <div>
-                    <h3 class="float-md-start mb-0">LogMyTime</h3>
+                    <h2 class="float-md-start mb-0">LogMyTime</h2>
                     <nav class="nav justify-content-center float-md-end">
                         <a class="btn btn-outline-primary mx-2" href="/login">Login</a>
                         <a class="btn btn-text mx-1" href="/register">Register</a>
@@ -44,7 +44,8 @@
             </main>
             
             <footer class="mt-auto">
-                <p>Built by <a href="https://danstewart.dev">Dan Stewart</a></p>
+                <p class="mb-0">Built by <a href="https://danstewart.dev">Dan Stewart</a></p>
+                <p>Source code available on <a href="https://github.com/danstewart/log-my-time">github.com</a></p>
             </footer>
         </div>
 	</body>
