--- a/app/static/html/home.html
+++ b/app/static/html/home.html
@@ -21,6 +21,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 	</head>
 
+    <style>
+        body {
+            background-color: #f2f2f2;
+            color: #222222;
+        }
+    </style>
+
 	<body class="h-100 d-flex text-center">
         <div class="d-flex h-100 container flex-column">
             <header class="mb-auto mt-3">
